--- a/todo-list/src/app/header/header.component.html
+++ b/todo-list/src/app/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div class="container">
+  <input type="text" [(ngModel)]="todo">
+  <button>Salvar</button>
+</div>
+<p>{{todo}}</p>
