--- a/todo-list/src/app/app.component.html
+++ b/todo-list/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h1>Pagina principal</h1>
-<app-header></app-header>
-<app-item-list></app-item-list>
+<div class="title-wrapper">
+  <h1>Meu To-Do</h1>
+</div>
+
+<div class="text_input-wrapper">
+  <app-header></app-header>
+</div>
+
+<div class="page-body">
+  <app-item-list></app-item-list>
+</div>
