--- a/todo-list/src/app/item-list/item-list.component.html
+++ b/todo-list/src/app/item-list/item-list.component.html
@@ -1,3 +1,17 @@
-<div class="list" *ngFor="let item of itemList">
-  <p>{{item}}</p>
+<div class="list-wrapper">
+  <div class="item" *ngFor="let item of itemList"
+    style="display: flex; margin-top: 10px">
+    <div class="checked-icons">
+      <img src="../../assets/icons/checked.png"
+      alt="task completed"
+      *ngIf="item.ready"
+      (click)="changeItemReady(item)">
+      <img src="../../assets/icons/unchecked.png"
+      alt="task not completed"
+      *ngIf="!item.ready"
+      (click)="changeItemReady(item)">
+    </div>
+    <p>{{item.title}}</p>
+  </div>
 </div>
+
