--- a/todo-list/src/app/item-list/item-list.component.scss
+++ b/todo-list/src/app/item-list/item-list.component.scss
@@ -5,6 +5,9 @@
 }
 
 .item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   background-color: rgb(249, 252, 255);
   padding: 10px 20px;
   border-radius: 30px;
@@ -13,6 +16,10 @@
 
 .item p {
   margin-left: 15px;
+}
+
+.left-side {
+  display: flex;
 }
 
 .checked-icons {
@@ -24,6 +31,17 @@
 }
 
 .checked-icons img:hover {
+  cursor: pointer;
+  filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
+}
+
+.remove-icon img {
+  width: 30px;
+  height: 30px;
+  overflow: hidden;
+}
+
+.remove-icon img:hover {
   cursor: pointer;
   filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
 }
